# Rust-Polkadot-Standalone_NFT_Blockchain

./: Chains startup commands  Development  PortaUI - JSON  chain-spec-raw.json
files/: Polkadot JSON code  Polkadot JSON code v2  old lib file  terminal commands  transfer_limited if limited amount was greater than 1
files/nft - NFT sent to Github/src/: lib.rs
keys/: KEY | Governance | test-candidate  KEY | Governance | test-candidate.json  KEY | Node  KEY | Root  KEY | User | generic-user  KEY | User | generic-user.json  KEY | Validator 4  KEY | Validator 4 - controller.json  KEY | Validator 4 - rewards.json  KEY | Validator 4 - stash.json  KEY | Validator 5  KEY | Validator 5 - controller.json  KEY | Validator 5 - rewards.json  KEY | Validator 5 - stash.json  KEY | Validator A.json  KEY | user | generic-user-proxy  KEY | user | generic-user-proxy.json
node/cli/res/: testnet.json
node/runtime/: Cargo.toml
node/runtime/src/: lib.rs
pallets/nft/: Cargo.toml
pallets/nft/src/: lib.rs
scripts/: prepare-test-net.sh
